Fix idea spamming messages that run configurations have changed